# algorithmus

./: .gitignore  Cargo.toml
answers/: dna  gc  iprb  prot  revc  rna  subs
inputs/: dna  gc  iprb  prot  revc  rna  subs
legacy-rust/cons/: input
legacy-rust/dna/: Cargo.toml  input
legacy-rust/dna/src/: main.rs
legacy-rust/fib/src/: main.rs
legacy-rust/fibd/: Cargo.toml  input
legacy-rust/hamm/: Cargo.toml
legacy-rust/iev/: input
legacy-rust/lcsm/: Cargo.toml
legacy-rust/lcsm/src/: main.rs
legacy-rust/lia/: Cargo.toml
legacy-rust/lia/src/: main.rs
legacy-rust/long/: Cargo.toml  input
legacy-rust/long/src/: main.rs
legacy-rust/mrna/: input
legacy-rust/mrna/src/: lib.rs  main.rs
legacy-rust/orf/: Cargo.toml
legacy-rust/orf/src/: main.rs
legacy-rust/prot/: Cargo.toml  input
legacy-rust/prtm/: input
legacy-rust/prtm/src/: bio.rs  main.rs
legacy-rust/revc/: Cargo.toml
legacy-rust/revc/src/: main.rs
legacy-rust/rna/: Cargo.toml
legacy-rust/rna/src/: main.rs
red-black-tree/haskell/: red-black-tree.cabal
red-black-tree/haskell/app/: Main.hs
red-black-tree/haskell/src/: Diagram.hs
red-black-tree/haskell/src/Data/: RedBlackTree.hs
red-black-tree/rust/: Cargo.toml
rosalind/haskell/dna/: dna.cabal  input
rosalind/haskell/gc/: gc.cabal  input
rosalind/haskell/revc/: input  revc.cabal
rosalind/haskell/rna/: input  rna.cabal
rosalind/haskell/subs/: input  subs.cabal
src/: bio.rs  lib.rs  main.rs  util.rs
src/problems/: dna.rs  fib.rs  gc.rs  iprb.rs  mod.rs  prot.rs  revc.rs  rna.rs  subs.rs
tests/: unit.rs
(+57 files in other folders)
