name:                red-black-tree
version:             0.1.0.0
synopsis:            Red-black tree
description:         Please see README.md
homepage:            https://github.com/banacorn/algorithmus
license:             MIT
license-file:        LICENSE
author:              Tîng-Giān Luā
maintainer:          banacorn@gmail.com
copyright:           2016 Tîng-Giān Luā
category:            Algorithm
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Lib
    build-depends:       base >= 4.7 && < 5
    default-language:    Haskell2010

executable red-black-tree-exe
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                     , red-black-tree
    default-language:    Haskell2010

test-suite red-black-tree-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       base
                        , red-black-tree
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/banacorn/algorithmus
